@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2018 Axelor (<http://axelor.com>).
+ * Copyright (C) 2019 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -235,9 +235,9 @@ public class TimesheetController {
   }
 
   public void editTimesheetSelected(ActionRequest request, ActionResponse response) {
-    Map timesheetMap = (Map) request.getContext().get("timesheetSelect");
+    Map<?, ?> timesheetMap = (Map<?, ?>) request.getContext().get("timesheetSelect");
     Timesheet timesheet =
-        Beans.get(TimesheetRepository.class).find(new Long((Integer) timesheetMap.get("id")));
+        Beans.get(TimesheetRepository.class).find(Long.valueOf((Integer) timesheetMap.get("id")));
     response.setView(
         ActionView.define("Timesheet")
             .model(Timesheet.class.getName())
@@ -384,6 +384,7 @@ public class TimesheetController {
       TimesheetService timesheetService = timesheetServiceProvider.get();
 
       Message message = timesheetService.confirmAndSendConfirmationEmail(timesheet);
+
       if (message != null && message.getStatusSelect() == MessageRepository.STATUS_SENT) {
         response.setFlash(
             String.format(
@@ -430,6 +431,8 @@ public class TimesheetController {
       Timesheet timesheet = request.getContext().asType(Timesheet.class);
       timesheet = timesheetRepositoryProvider.get().find(timesheet.getId());
       TimesheetService timesheetService = timesheetServiceProvider.get();
+
+      timesheetService.checkEmptyPeriod(timesheet);
 
       computeTimeSpent(request, response);
 
@@ -503,7 +506,7 @@ public class TimesheetController {
             .generate()
             .getFileLink();
 
-    logger.debug("Printing " + name);
+    logger.debug("Printing {}", name);
 
     response.setView(ActionView.define(name).add("html", fileLink).map());
   }
@@ -546,8 +549,9 @@ public class TimesheetController {
   public void timesheetPeriodTotalController(ActionRequest request, ActionResponse response) {
     try {
       Timesheet timesheet = request.getContext().asType(Timesheet.class);
+      TimesheetService timesheetService = timesheetServiceProvider.get();
 
-      BigDecimal periodTotal = timesheetServiceProvider.get().computePeriodTotal(timesheet);
+      BigDecimal periodTotal = timesheetService.computePeriodTotal(timesheet);
 
       response.setAttr("periodTotal", "value", periodTotal);
       response.setAttr("$periodTotalConvert", "hidden", false);
@@ -557,9 +561,7 @@ public class TimesheetController {
           Beans.get(TimesheetLineService.class)
               .computeHoursDuration(timesheet, periodTotal, false));
       response.setAttr(
-          "$periodTotalConvert",
-          "title",
-          timesheetServiceProvider.get().getPeriodTotalConvertTitle(timesheet));
+          "$periodTotalConvert", "title", timesheetService.getPeriodTotalConvertTitle(timesheet));
     } catch (Exception e) {
       TraceBackService.trace(response, e);
     }
